# brain-radio

./: .dockerignore  .gitignore  .pre-commit-config.yaml  AGENTS.md  AGENT_RULES.md  CODE_REVIEW_SUMMARY.md  DOCKER_SETUP.md  Dockerfile.backend  Dockerfile.backend.production  Dockerfile.test  QUALITY_GATE_STATUS.md  QUALITY_GATE_VERIFICATION.md  QUICKSTART.md  QUICKSTART_UI.md  QUICK_CHECK_RESULTS.md  README.md  README_DOCKER.md  README_DOCKER_TESTS.md  README_UI.md  SECURITY_SETUP.md  checks-config.yaml  docker-compose.dev.yml  docker-compose.yml  pyproject.toml  renovate.json  setup.py  start.sh
.checks/: ADDITIONAL_CHECKS_PROPOSAL.md  AUTO_CHECKS_GUIDE.md  README.md  install.sh
.checks/scripts/: install-git-hooks.sh  orchestrator.sh  pre-commit-hook.sh  quality-gate.sh  quick-check.sh  watch-and-check.sh
.checks/templates/: checks-config.yaml.example
.github/: dependabot.yml
docs/: ACCEPTANCE_CRITERIA.md  CHATGPT_DEEP_RESEARCH_ORIGIN.md  CLEAN_CODE_REVIEW_JOURNAL.md  CODE_REVIEW.md  DOCKER_BUILD_TESTING.md  DOCKER_QUICK_CHECK.md  DOCKER_TEST_STRATEGY.md  GEMINI_DEEP_RESEARCH.md  PRD.md  RENOVATE_MANUAL_WORKFLOW.md  RENOVATE_SETUP.md  SSL_CERTIFICATE_FIX.md  SSL_CERTIFICATE_TEST_RESULTS.md
frontend/: .dockerignore  Dockerfile  Dockerfile.dev  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
scripts/: README_YOUTUBE_TRANSCRIPT.md  VERIFICATION_SUMMARY.md  quality-gate.sh  run-docker.sh  run-renovate.sh  security-quality-orchestrator.sh  start-dev.sh  test-docker-builds.sh  test-docker.sh  youtube_transcript.py
tests/: _clean_code_rule_parser.py  _config_generator.py  _project_detector.py  _test_generator.py  clean_code_test_config.yaml  generate_and_test_clean_code.py  test_api.py  test_api_main_module.py  test_clean_code_static.py  test_clean_code_validator_system.py  test_cli.py  test_cli_direct.py  test_cli_execution.py  test_distraction_scoring.py  test_dummy.py  test_end_to_end.py  test_genre_constraint.py  test_neuro_composer.py  test_neuro_composer_unknown_mode.py  test_researcher.py  test_supervisor.py  test_supervisor_errors.py  test_youtube_transcript.py
(+70 files in other folders)
